# reaktor

./: .gitattributes  .gitignore  README.md  SETUP.md  gradle.properties  publishing.gradle.kts  root.cmake  settings.gradle.kts
.github/: publish.yml
dependeasy/: build.gradle.kts
dependeasy/src/main/kotlin/dev/shibasis/dependeasy/: DependeasyDsl.kt  Version.kt
dependeasy/src/main/kotlin/dev/shibasis/dependeasy/android/: androidConfig.kt
experiments/cloudflare-hello-worker/: package.json
reaktor-auth/: README.md
reaktor-auth/ts/: package-lock.json
reaktor-cloudflare/: README.md
reaktor-core/: README.md
reaktor-core/js/: package-lock.json
reaktor-db/: README.md  build.gradle.kts
reaktor-db/src/commonMain/kotlin/dev.shibasis.reaktor.db/graph/: GraphDbPolicy.kt
reaktor-db/src/commonTest/kotlin/dev.shibasis.reaktor.db/graph/: MandatoryTenantParameterizationTest.kt
reaktor-ffi/: README.md  build.gradle.kts
reaktor-ffi/cpp/: CMakeLists.txt
reaktor-ffi/cpp/common/: Engine.cpp  Engine.h  HermesHello.cpp  HermesHello.h
reaktor-ffi/cpp/darwin/: DarwinInvokable.h
reaktor-ffi/cpp/droid/: AndroidInvokable.cpp  AndroidInvokable.h
reaktor-ffi/cpp/main/: main.cpp
reaktor-ffi/js/: README.md
reaktor-ffi/webpack.config.d/: 99-prod-sanity.js
reaktor-flexbuffer/: README.md  build.gradle.kts
reaktor-flexbuffer/cpp/: CMakeLists.txt
reaktor-flexbuffer/cpp/common/: CBase.cpp  CBase.h  CppBase.cpp  CppBase.h  Matrix.h  NativeFlexBuffer.cpp  NativeFlexBuffer.h  Visitor.cpp  Visitor.h
reaktor-flexbuffer/cpp/darwin/: Reaktor.h  Reaktor.mm
reaktor-flexbuffer/cpp/droid/: NativeFlexBuffer.cpp
reaktor-flexbuffer/flamechart/: ANALYSIS.md  generate-all.sh  generate-android.sh  generate-js.sh  generate-jvm.sh  generate-native.sh
reaktor-flexbuffer/ts/export/: bench.js  package.json  reaktor-reaktor-flexbuffer.d.mts  reaktor-reaktor-flexbuffer.mjs  reaktor-reaktor-flexbuffer.mjs.map  searchMyntra.json
reaktor-google/: README.md
reaktor-graph/: README.md
reaktor-graph-port/ts/: package-lock.json
reaktor-graph/ts/: package-lock.json
reaktor-io/: README.md
reaktor-location/: README.md
reaktor-media/: README.md
reaktor-notification/: README.md
reaktor-react/: README.md  build.gradle.kts
reaktor-tactile/: README.md
reaktor-telemetry/: build.gradle.kts
reaktor-ui/: README.md
reaktor-work/: README.md
tools/maestro/: README.md  common.sh  instrument-maestro-flow.rb  run-android-flow.sh  run-ios-flow.sh
website/: README.md
(+29 files in other folders)
